2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: create a purpose-specific 'junk'
	  directory to test dumps

2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Archive.pl installcheck/Amanda_Changer_compat.pl
	  installcheck/Amanda_Changer_disk.pl
	  installcheck/Amanda_Changer_rait.pl installcheck/Amanda_Device.pl
	  installcheck/Amanda_Logfile.pl installcheck/Amanda_Process.pl
	  installcheck/Amanda_Xfer.pl installcheck/Installcheck.pm
	  installcheck/Installcheck/Config.pm
	  installcheck/Installcheck/Dumpcache.pm
	  installcheck/Installcheck/Run.pm installcheck/Makefile.am
	  installcheck/amarchiver.pl installcheck/amfetchdump.pl
	  installcheck/amgetconf.pl installcheck/amgtar.pl
	  installcheck/ampgsql.pl installcheck/amservice.pl
	  installcheck/amstatus.pl installcheck/pp-scripts.pl: use a
	  subdirectory of AMANDA_TMPDIR for installcheck temporary files

2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_MainLoop.pl: report "timeout" on a timeout
	* amar-src/amar-test.c common-src/amflock-test.c
	  common-src/event-test.c common-src/queueing-test.c
	  common-src/quoting-test.c common-src/semaphore-test.c
	  device-src/vfs-test.c xfer-src/xfer-test.c: increase timeouts
	  drastically

2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: change the default changerfile to
	  $CONFIG_DIR/changer

2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/property.c device-src/property.h: add PROPERTY_COMMENT
	* device-src/device.c: support PROPERTY_COMMENT
	* installcheck/Amanda_Device.pl: test it
	* man/xml-source/amanda-devices.7.xml: document it

2009-02-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add t, tb, tera, ... suffix.
	* man/xml-source/amanda.conf.5.xml: Document it.

2009-01-28  Nikolas Coukouma <atrus@zmanda.com>
	* example/amanda-client-postgresql.conf.in,
	  example/Makefile.am,
	  man/Makefile.am,