@@ -1,3 +1,8 @@
+2009-02-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/changer.c: if changer_find is used to search for a
+	  specific tape, do not try a redundant manual scan after the
+	  search fails
+
 2009-02-20  Dustin J. Mitchell <dustin@zmanda.com>
 	* installcheck/Installcheck/Run.pm: create a purpose-specific 'junk'
 	  directory to test dumps
